[gd_scene load_steps=9 format=3 uid="uid://n1e4vd3wmgj4"]

[ext_resource type="Texture2D" uid="uid://b41stcd6g33mi" path="res://png/background.png" id="1_paqku"]
[ext_resource type="PackedScene" uid="uid://dqh3trwm4smod" path="res://ui.tscn" id="2_iytib"]
[ext_resource type="PackedScene" uid="uid://ci01t38757bvr" path="res://view.tscn" id="3_gmkf1"]
[ext_resource type="PackedScene" uid="uid://diejjpsf5s6pd" path="res://Menu/menu.tscn" id="4_dhysq"]
[ext_resource type="PackedScene" uid="uid://dtyp8htqy4fd2" path="res://event_popup/event_window1.tscn" id="4_t7hkk"]
[ext_resource type="PackedScene" uid="uid://dtw641sruxwlq" path="res://event_popup/listener_bubble.tscn" id="5_ixf3o"]
[ext_resource type="PackedScene" uid="uid://cecoa35ps282h" path="res://Intro/intro_window.tscn" id="7_cd71p"]
[ext_resource type="Script" path="res://Event_management/event_manager.gd" id="7_s0rid"]

[node name="Untitled Cult Game" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
scale = Vector2(2, 2)
texture = ExtResource("1_paqku")
offset = Vector2(960, 540)

[node name="UI" parent="." instance=ExtResource("2_iytib")]

[node name="View" parent="." instance=ExtResource("3_gmkf1")]

[node name="event_window1" parent="." instance=ExtResource("4_t7hkk")]
initial_position = 2

[node name="event_pop_up" parent="." instance=ExtResource("5_ixf3o")]
offset_left = 1032.0
offset_top = 202.0
offset_right = 1032.0
offset_bottom = 202.0

[node name="event_pop_up2" parent="." instance=ExtResource("5_ixf3o")]
offset_left = 1299.0
offset_top = 671.0
offset_right = 1299.0
offset_bottom = 671.0

[node name="event_pop_up3" parent="." instance=ExtResource("5_ixf3o")]
offset_left = 2021.0
offset_top = 850.0
offset_right = 2021.0
offset_bottom = 850.0

[node name="event_pop_up4" parent="." instance=ExtResource("5_ixf3o")]
offset_left = 2134.0
offset_top = 133.0
offset_right = 2134.0
offset_bottom = 133.0

[node name="event_pop_up5" parent="." instance=ExtResource("5_ixf3o")]
offset_left = 1646.0
offset_top = 299.0
offset_right = 1646.0
offset_bottom = 299.0

[node name="Menu" parent="." instance=ExtResource("4_dhysq")]
scale = Vector2(1, 1)

[node name="Event_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_s0rid")

[node name="intro_window" parent="." instance=ExtResource("7_cd71p")]

[connection signal="event_window_done" from="event_window1" to="Event_manager" method="_on_event_window_1_event_window_done"]
[connection signal="bubble_signal" from="event_pop_up" to="UI" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up" to="event_window1" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up2" to="UI" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up2" to="event_window1" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up3" to="UI" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up3" to="event_window1" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up4" to="UI" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up4" to="event_window1" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up5" to="UI" method="_on_event_pop_up_bubble_signal"]
[connection signal="bubble_signal" from="event_pop_up5" to="event_window1" method="_on_event_pop_up_bubble_signal"]
